--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,8 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "list": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "bitset": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
